- Removed depreciated classes: Pair, UserDefinedMeasure, and MenuBar - Cleaned up a bunch of warnings