@@ -18,7 +18,7 @@ public class ChiSquare implements IMeasure {
     private DataSet inputData;
     private final String name = MeasureConstants.chi;
     private final int minimumSamples = 1;
-    private final List<String> requiredVariables = Arrays.asList("d");
+    private final List<String> requiredVariables = List.of("d");
     private final boolean isGraphable = false;
     private final List<GraphTypes> validGraphs = List.of();
     private final CardTypes cardType = CardTypes.ONE_DATA_ONE_VARIABLE;
